compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_an_unqualified_import_already_imported.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nimport dep.{wibble,wabble,type Wibble}\n\npub fn main() {\n  0\n}"
snapshot_kind: text
---
import dep.{|wibble,wabble,type Wibble}

pub fn main() {
  0
}


----- Completion content -----
