compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_an_unqualified_import_on_new_line.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nimport dep.{\n  wibble,\n\n}\n\npub fn main() {\n  0\n}"
snapshot_kind: text
---
import dep.{
  wibble,
|
}

pub fn main() {
  0
}


----- Completion content -----
