compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_imported_function_labels.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nimport dep\n\nfn fun() { // completion inside parens below includes labels\n  let wibble = dep.wibble()\n}\n"
snapshot_kind: text
---
import dep

fn fun() { // completion inside parens below includes labels
  let wibble = dep.wibble(|)
}


----- Completion content -----
