compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_prelude_values.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() {\n  let my_bool = T\n}\n"
snapshot_kind: text
---
pub fn main() {
  let my_bool = T|
}


----- Completion content -----
