compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_type_import_completions_without_brackets.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: import dep.
snapshot_kind: text
---
import dep.|


----- Completion content -----
