compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__constant_with_module_select.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nimport wibble\n\ntype Wibble {\n  Wibble\n}\n\nconst pi = 3.14159\n\nfn some_function() {\n  todo\n}\n\nconst my_constant = wibble.W\n"
snapshot_kind: text
---
import wibble

type Wibble {
  Wibble
}

const pi = 3.14159

fn some_function() {
  todo
}

const my_constant = wibble.W|


----- Completion content -----
