compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__for_custom_type_definition.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub type Wibble {\n  Wobble\n}"
snapshot_kind: text
---
pub type Wibble {
|  Wobble
}


----- Completion content -----
